# 404

./: .dockerignore  .gitignore  .ssh-test.md  404-website-buil.plan.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION.md  PERFORMANCE_TESTING.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  TECHNICAL_SUMMARY.md  TESTING.md  TEST_SUMMARY.md  VERCEL_REMOVAL_VERIFICATION.md  WORKFLOW.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  fix-nvrtc-build.sh  jest.config.js  jest.setup.js  package-lock.json  package.json  test-websocket.js  validate.sh
.github/ISSUE_TEMPLATE/: general.md
.github/workflows/: deploy.yml  test.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: SimulationSourcePanel.tsx  TechStack.tsx  TelemetryDashboard.tsx  UnifiedTelemetryPanel.tsx
backend/: .gitignore  Cargo.toml  README.md  TEST_COVERAGE.md  build-backend-verbose.sh  build-cuda.sh  build.rs  check-error-verbose.sh  diagnose-crash-verbose.sh  fix-nvrtc-verbose.sh  quick-fix-backend.sh  start-backend-cpu.sh  start-backend-verbose.sh  start-backend.sh  test-backend-verbose.sh  verify-success.sh
backend/src/: broadcast.rs  cuda.rs  gpu_stats.rs  main.rs  simulation_engine.rs  tests.rs
backend/src/cuda/: kernels.rs
backend/src/kernels/: boids.cu  boids_spatial.cu
backend/src/physics/: boids.rs  grayscott.rs  mod.rs  sdf.rs  sph.rs
keploy/: README.md  docker-compose.keploy.yml  record-baseline.sh
keploy/baseline-snapshots/: README.md  gpu-info.json  simulate-boids.json  simulate-grayscott.json  simulate-sph.json
lib/: constants.ts
(+50 files in other folders)
